--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,16 @@
-body {
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+@layer components{
+  .check-content{
+    @apply mb-[50px] flex gap-8 ml-[70px] mr-[29px] items-center md:mx-0
+  }
+  .btn-hover{
+    @apply cursor-pointer hover:text-purple-500 transition-all duration-200 
+  }
+}
+/* body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
@@ -10,4 +22,7 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+} */
+.underline {
+  text-decoration: none;
 }
